--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,14 @@
 <!-- <div class="container">
   <button mat-button [matMenuTriggerFor]="menu">{{menuTitle.name}} ({{menuTitle.id}})</button>
-<mat-menu style="background-color: blue;" #menu="matMenu">
-  <div class="container-fluid" >
-    <app-auto-complete (dealerSelected)="onDealerSelect($event)"></app-auto-complete>
-  </div>
-</mat-menu>
+  <mat-menu style="background-color: blue;" #menu="matMenu">
+    <div class="container-fluid">
+      <app-auto-complete (dealerSelected)="onDealerSelect($event)"></app-auto-complete>
+    </div>
+  </mat-menu>
 </div> -->
 
-<app-auto-complete></app-auto-complete>
+<!-- <app-auto-complete></app-auto-complete> -->
+
+<div class="container">
+  <app-header></app-header>
+</div>
