--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,27 @@
 
 <!-- <app-auto-complete></app-auto-complete> -->
 
-<div class="container">
+<!-- <div class="container">
   <app-header></app-header>
+</div> -->
+
+<div class="d-flex h-100 bg-warning">
+  <div class="h-100" class="sidenav-custom" [ngClass]="isMenuVisible ? 'menu-width' : 'no-menu-width'">
+    <ul class="list-group">
+      <li class="list-group-item">Cras justo odio</li>
+      <li class="list-group-item">Dapibus ac facilisis in</li>
+      <li class="list-group-item">Morbi leo risus</li>
+      <li class="list-group-item">Porta ac consectetur ac</li>
+      <li class="list-group-item">Vestibulum at eros</li>
+    </ul>
+  </div>
+  <div class="h-100 bg-info" (click)="toggle()">
+    <button class="btn btn-secondary">Toggle</button>
+  </div>
+  <div class="p-2 bg-primary flex-grow-1 h-100">
+    <div class="container">
+
+      <app-header></app-header>
+    </div>
+  </div>
 </div>
